--- a/index.html
+++ b/index.html
@@ -190,6 +190,6 @@
         </ul>
       </div>
     </div>
-    <script src="/main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
