--- a/index.html
+++ b/index.html
@@ -187,6 +187,13 @@
           <li class="other__item item">
             <a class="other__link link" href="https://itgid.info/ua">itgid</a>
           </li>
+          <li class="other__item item">
+            <a
+              class="other__link link"
+              href="https://mergeacademy.notion.site/Front-end-b8f70a270e354e5b870a7366b3ebf5b6"
+              >merge academy</a
+            >
+          </li>
         </ul>
       </div>
     </div>
